installr 0.10.0 (2013-07-02)
---------------------------

NEW FUNCTIONS ADDED:
   * uninstall.R
   * is.empty - function added for checking if an object is empty (e.g: of zero length)

OTHER NOTES:
   * Moving to the versioning scheme suggested by Yihui (see: http://yihui.name/en/2013/06/r-package-versioning/)
   * is.x.r file created - moving various "is.*" functions to this file.
   * Added a welcome massage when loading the package.
   * Updated the README.md with some of the newer functions.
   * installr 0.10.0 is to be shipped to CRAN.


installr 0.9.5 (2013-06-12)
---------------------------

NEW FUNCTIONS ADDED:
   * download_RStudio_CRAN_data
   * read_RStudio_CRAN_data
   * barplot_package_users_per_day
   * lineplot_package_downloads
   * format_RStudio_CRAN_data
   * most_downloaded_packages

UPDATED FUNCTIONS:
   * require2 - the 'package' parameter no longer needs quotes. (just like in the require function)

OTHER NOTES:
   * RStudio_CRAN_data.r file created



installr 0.9.4 (2013-05-21)
---------------------------

NEW FUNCTIONS ADDED:
   * myip - return your ip address.
   * freegeoip - Geolocate IP addresses in R (contributed by Heuristic Andrew)
   * restart_RGui - a function to restart Rgui from Rgui
   
UPDATED FUNCTIONS:
   * require2 - added the "ask" parameter.

OTHER NOTES:
   * geo_functions.r file created
   * cranometer - function moved to the geo_functions.r file.


installr 0.9.3 (2013-05-18)
---------------------------

UPDATED FUNCTIONS:
   * install.R - started using checkMD5sums2 instead of checkMD5sums in order to allow the manual removal of the files ‘etc/Rconsole’ and ‘etc/Rprofile.site’ from the checksums (they are changed during the R installation process, and always give an error massage)
   * checkMD5sums2 - added the omit_files parameter (allowing the removal of the files ‘etc/Rconsole’ and ‘etc/Rprofile.site’ from the checksums of an R installation)